risc0/zirgen/dsl/test/repro/lexer_out_of_bounds.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error:

import mid;

import leaf;

extern SomeTopThingThing
// foo
// bar

